Fixed image height on mobile category pages

--- a/assets/css/css.styl
+++ b/assets/css/css.styl
@@ -559,6 +559,8 @@ a > span // Make citations appear correctly
   li
     width 9rem
     margin-bottom 1.5rem
+    img
+      height 6.75rem
   h3
     margin-top .5rem
 */
